13289
The code below crashes the compiler (build number 2.7.1.r14638).
```scala
class CrashCompilerTest {
        class Inner(c: int) {
        }
        class Inner(c: int) {
        }
}
```

The compiler reports the error 
```scala
CrashCompiler.scala:1: error: illegal cyclic reference involving class CrashCompilerTest
class CrashCompilerTest {
      ^
```

before it crashes with the stack trace
```scala
Exception in thread "main" java.util.NoSuchElementException: head of empty list
	at scala.Nil$$.head(List.scala:1244)
	at scala.Nil$$.head(List.scala:1241)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedSuper$$1(Typers.scala:2586)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3079)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3085)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$typedApply$$1$$1.apply(Typers.scala:2472)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$typedApply$$1$$1.apply(Typers.scala:2472)
	at scala.tools.nsc.typechecker.Typers$$Typer.silent(Typers.scala:559)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2472)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3071)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1518)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.List$$.loop$$1(List.scala:254)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedBlock(Typers.scala:1368)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2936)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedDefDef(Typers.scala:1303)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2912)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1518)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.List$$.loop$$1(List.scala:254)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1156)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedClassDef(Typers.scala:1030)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2903)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1518)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$19.apply(Typers.scala:1563)
	at scala.List$$.loop$$1(List.scala:254)
	at scala.List$$.mapConserve(List.scala:271)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1563)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2899)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3174)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3211)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.apply(Analyzer.scala:40)
	at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:247)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.Iterator$$class.foreach(Iterator.scala:382)
	at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
	at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
	at scala.tools.nsc.Global$$Run.compileSources(Global.scala:545)
	at scala.tools.nsc.Global$$Run.compile(Global.scala:629)
	at scala.tools.nsc.Main$$.process(Main.scala:86)
	at scala.tools.nsc.Main$$.main(Main.scala:107)
	at scala.tools.nsc.Main.main(Main.scala)
```
